--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <span>#jQuery</span>
                     </div><!-- .project-tag -->
                     <div class="more-btn">
-                        <div class="btn"><a href="#">VIEW CODE</a></div>
+                        <div class="btn"><a target="_blank" href="https://github.com/immiju/cos">VIEW CODE</a></div>
                     </div><!-- .more-btn -->
                 </div><!-- .caption-right -->
             </div><!-- .project-caption -->
