--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <span>#fullPage</span>
                     </div><!-- .project-tag -->
                     <div class="more-btn">
-                        <div class="btn"><a href="#">VIEW CODE</a></div>
+                        <div class="btn"><a target="_blank" href="https://github.com/immiju/hibrow">VIEW CODE</a></div>
                     </div><!-- .more-btn -->
                 </div><!-- caption-right -->
             </div><!-- .project-caption -->
@@ -188,7 +188,7 @@
                         <span>#Branding</span>
                     </div><!-- .project-tag -->
                     <div class="more-btn">
-                        <div class="btn"><a href="#">VIEW CODE</a></div>
+                        <div class="btn"><a target="_blank" href="https://github.com/immiju/nicecatch">VIEW CODE</a></div>
                     </div><!-- .more-btn -->
                 </div><!-- .caption-right -->
             </div><!-- .project-caption -->
@@ -218,7 +218,7 @@
                         <span>#Swiper</span>
                     </div><!-- .project-tag -->
                     <div class="more-btn">
-                        <div class="btn left"><a href="#">VIEW CODE</a></div>
+                        <div class="btn left"><a target="_blank" href="https://github.com/immiju/wayo">VIEW CODE</a></div>
                     </div><!-- .more-btn -->
                 </div><!-- .caption-right -->
             </div><!-- .project-caption -->
@@ -247,7 +247,7 @@
                         <span>#jQuery</span>
                     </div><!-- .project-tag -->
                     <div class="more-btn">
-                        <div class="btn left"><a href="#">VIEW CODE</a></div>
+                        <div class="btn left"><a target="_blank" href="https://github.com/immiju/daangn">VIEW CODE</a></div>
                     </div><!-- .more-btn -->
                 </div><!-- .caption-right -->
             </div><!-- .project-caption -->
