--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="mail cursor-scale"><a href="mailto:jomiju0131@gmail.com">📬 &nbsp; jomiju0131@gmail.com</a></div>
         </div><!-- .footer-contact -->
         <div class="footer-link">
-            <span class="cursor-scale"><a target="_blank" href="https://github.com/chomizu">Git Hub</a></span>
+            <span class="cursor-scale"><a target="_blank" href="https://github.com/immiju">Git Hub</a></span>
             <!--<span class="cursor-scale"><a href="#">Velog</a></span>-->
         </div>
     </div>
