--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="project-content">
             <h1 class="project-title">COS</h1> 
             <div class="project-img">
-                <a target="_blank" href="http://mizu.dothome.co.kr/portfolio/cos/cos.html">
+                <a target="_blank" href="https://immiju.github.io/cos/cos.html">
                     <div class="img-cover">
                         <span>SITE VIEW</span>
                     </div>
@@ -135,7 +135,7 @@
         <div class="project-content">
             <h1 class="project-title">HIBROW</h1>
             <div class="project-img">
-                <a target="_blank" href="http://mizu.dothome.co.kr/portfolio/hibrow/hibrow.html">
+                <a target="_blank" href="https://immiju.github.io/hibrow/hibrow.html">
                     <div class="img-cover">
                         <span>SITE VIEW</span>
                     </div>
@@ -165,7 +165,7 @@
         <div class="project-content">
             <h1 class="project-title">NICE CATCH</h1>
             <div class="project-img">
-                <a target="_blank" href="http://mizu.dothome.co.kr/portfolio/nicecatch/nicecatch.html">
+                <a target="_blank" href="https://immiju.github.io/nicecatch/nicecatch.html">
                     <div class="img-cover">
                         <span>SITE VIEW</span>
                     </div>
@@ -197,7 +197,7 @@
         <div class="project-content">
             <h2 class="project-title">WAYO</h2>
             <div class="project-img">
-                <a target="_blank" href="http://mizu.dothome.co.kr/portfolio/wayo/wayo.html">
+                <a target="_blank" href="https://immiju.github.io/wayo/wayo.html">
                     <div class="img-cover">
                         <span>SITE VIEW</span>
                     </div>
@@ -227,7 +227,7 @@
         <div class="project-content">
             <h1 class="project-title">DAANGN</h1>
             <div class="project-img">
-                <a target="_blank" href="http://mizu.dothome.co.kr/portfolio/daangn/daangn.html">
+                <a target="_blank" href="https://immiju.github.io/daangn/daangn.html">
                     <div class="img-cover">
                         <span>SITE VIEW</span>
                     </div>
@@ -308,7 +308,7 @@
                     <polyline class="cls-1" points="69.31 82.25 17.75 82.25 17.75 30.69"/>
                 </svg>
             </div><!-- .contact-title-->
-            <div class="mail cursor-scale"><a href="mailto:jomiju0131@gmail.com">📬 &nbsp; jomiju0131@gmail.com</a></div>
+            <div class="mail cursor-scale"><a href="mailto:jomiju0131@gmail.com">📬 &nbsp; jomiju0131@gmail.com </a></div>
         </div><!-- .footer-contact -->
         <div class="footer-link">
             <span class="cursor-scale"><a target="_blank" href="https://github.com/immiju">Git Hub</a></span>
