--- a/index.html
+++ b/index.html
@@ -43,22 +43,20 @@
 </div><!-- .loading -->
 
 <header>
-    <div class="inner-wrap">
-        <div class="logo cursor-scale">
-            <svg class="logo-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200">
-                <circle class="cls-1" cx="97.02" cy="100" r="89.77"/>
-                <circle class="cls-1" cx="202.98" cy="100" r="89.77"/>
-                <path d="m113.21,100c0,29.76,14.49,56.14,36.79,72.47,22.3-16.33,36.79-42.71,36.79-72.47s-14.49-56.14-36.79-72.47c-22.3,16.33-36.79,42.71-36.79,72.47Z"/>
-            </svg>
-        </div><!-- .logo -->
-        <nav>
-            <ul class="cursor-scale">
-                <li class="projects"><a href="#projects">PROJECTS</a></li>
-                <li class="about"><a href="#about">ABOUT</a></li>
-                <li class="contact"><a href="mailto:jomiju0131@gmail.com">CONTACT</a></li>
-            </ul>
-        </nav>
-    </div><!-- .inner-wrap -->
+    <div class="logo cursor-scale">
+        <svg class="logo-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200">
+            <circle class="cls-1" cx="97.02" cy="100" r="89.77"/>
+            <circle class="cls-1" cx="202.98" cy="100" r="89.77"/>
+            <path d="m113.21,100c0,29.76,14.49,56.14,36.79,72.47,22.3-16.33,36.79-42.71,36.79-72.47s-14.49-56.14-36.79-72.47c-22.3,16.33-36.79,42.71-36.79,72.47Z"/>
+        </svg>
+    </div><!-- .logo -->
+    <nav>
+        <ul class="cursor-scale">
+            <li class="projects"><a href="#projects">PROJECTS</a></li>
+            <li class="about"><a href="#about">ABOUT</a></li>
+            <li class="contact"><a href="mailto:jomiju0131@gmail.com">CONTACT</a></li>
+        </ul>
+    </nav>
 </header>
 
 <section class="home">
@@ -81,7 +79,7 @@
                 <span class="blue">CHO MI JU</span>
             </p>
         </span>
-    </div><!-- .home-title -->
+    </div><!-- .home-txt -->
     
     <div class="scroll">
         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -92,9 +90,10 @@
             <div class="scroll-txt-wrap">
                 <p>SCROLL DOWN ! </p>
                 <p>SCROLL DOWN ! </p>
+                <p>SCROLL DOWN ! </p>
             </div>
         </div>
-    </div><!-- .scroll-icon -->
+    </div><!-- .scroll -->
 </section><!-- #home -->
 
 <main id="projects">
@@ -254,7 +253,7 @@
     <p>DILIGENCE</p>
 
     <div class="ending-txt">
-        <p>눈과 손이 즐거운 🕹️ 인터랙티브 웹에 관심이 많습니다.<br><strong>웹 접근성</strong>을 고려한 탄탄한 구조의 🛠️ 시맨틱 마크업과,<br>🪅 매력적인 UX&#8226;UI를  만들기 위한 <strong>CSS, JS 기술</strong>을<br>지속적으로 연구하고 새로운 것에 <strong>도전</strong>하고자 합니다. 🔭
+        <p>눈과 손이 즐거운 🕹️ <strong>인터랙티브 웹</strong>에 관심이 많습니다.<br><strong>웹 접근성</strong>을 고려한 탄탄한 구조의 🛠️ 시맨틱 마크업과,<br>🪅 매력적인 UX&#8226;UI를  만들기 위한 <strong>CSS와 JS 기술</strong>을<br>지속적으로 연구하고 새로운 것에 <strong>도전</strong>하고자 합니다. 🔭
         </p>
     </div><!-- .ending-txt -->
 
