--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
 <link rel="shortcut icon" href="img/icon.png"> <!--Android-->
 <link rel="apple-touch-icon" href="img/icon.png"> <!--Apple Ios-->
-<link rel="stylesheet" href="index css/index.css">
 
+<link rel="stylesheet" href="index css/index.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 <script src="https://kit.fontawesome.com/3da15d9327.js" crossorigin="anonymous"></script>
+
 <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
@@ -98,7 +99,10 @@
 
 <main id="projects">
     <section>
-        <h2>COS</h2> 
+        <div class="title">
+            <h2>COS</h2> 
+            <p>2023. 2. 23 - 2023. 3. 2 📌 8 days ⏱️ 14h</p>
+        </div>
         <div class="img-box">
             <a target="_blank" href="https://immiju.github.io/cos/cos.html">
                 <div class="img-cover">
@@ -127,7 +131,10 @@
     </section>
 
     <section>
-        <h2>HIBROW</h2>
+        <div class="title">
+            <h2>HIBROW</h2>
+            <p>2023. 1. 6 - 2023. 1. 9 📌 3 days ⏱️ 12h</p>
+        </div>
         <div class="img-box">
             <a target="_blank" href="https://immiju.github.io/hibrow/hibrow.html">
                 <div class="img-cover">
@@ -157,7 +164,10 @@
     </section>
 
     <section>
-        <h2>NICE CATCH</h2>
+        <div class="title">
+            <h2>NICE CATCH</h2>
+            <p>2023. 1. 25 - 2023. 1. 31 📌 7 days ⏱️ 18h</p>
+        </div>
         <div class="img-box">
             <a target="_blank" href="https://immiju.github.io/nicecatch/nicecatch.html">
                 <div class="img-cover">
@@ -168,7 +178,7 @@
         </div><!-- .project-img -->
         <div class="caption-wrap">
             <div class="caption-01">
-                <p>가상의 반려 생활 쇼핑몰 나이스 캣치의 웹 사이트를 기획하고 UX/UI를 디자인했습니다.</p>
+                <p>가상의 반려 생활 쇼핑몰 나이스 캣치의 웹 사이트를 기획하고 디자인했습니다.</p>
                 <p> 모바일 디바이스를 기준으로 작업한 적응형 사이트입니다.</p>
             </div><!-- .caption-01 -->
             <div class="caption-02">
@@ -188,7 +198,10 @@
     </section>
 
     <section>
-        <h2>WAYO</h2>
+        <div class="title">
+            <h2>WAYO</h2>
+            <p>2023. 12. 19 - 2023. 12. 22 📌 4 days ⏱️ 9h</p>
+        </div>
         <div class="img-box">
             <a target="_blank" href="https://immiju.github.io/wayo/wayo.html">
                 <div class="img-cover">
@@ -218,7 +231,10 @@
     </section>
         
     <section>
-        <h2>DAANGN</h2>
+        <div class="title">
+            <h2>DAANGN</h2>
+            <p>2023. 11. 17 - 2023. 11. 20 📌 3 days ⏱️ 6h</p>
+        </div>
         <div class="img-box">
             <a target="_blank" href="https://immiju.github.io/daangn/daangn.html">
                 <div class="img-cover">
